pilot/pkg/security/authz/builder/testdata/v1beta1/action-allow-HTTP-for-TCP-filter-out.yaml
rules:
  policies:
    ns[foo]-policy[httpbin-deny]-rule[1]:
      permissions:
      - andRules:
          rules:
          - orRules:
              rules:
              - destinationPort: 80
      principals:
      - andIds:
          ids:
          - orIds:
              ids:
              - authenticated:
                  principalName:
                    safeRegex:
                      googleRe2: {}
                      regex: .*/ns/ns-1/.*
