pilot/pkg/security/authz/builder/testdata/v1beta1/all-fields-out.yaml
rules:
  policies:
    ns[foo]-policy[httpbin-1]-rule[0]:
      permissions:
        - andRules:
            rules:
              - orRules:
                  rules:
                    - header:
                        exactMatch: exact.com
                        name: :authority
                    - header:
                        name: :authority
                        suffixMatch: .suffix.com
                    - header:
                        name: :authority
                        prefixMatch: prefix.
                    - header:
                        name: :authority
                        presentMatch: true
              - orRules:
                  rules:
                    - header:
                        exactMatch: method
                        name: :method
                    - header:
                        name: :method
                        prefixMatch: method-prefix-
                    - header:
                        name: :method
                        suffixMatch: -suffix-method
                    - header:
                        name: :method
                        presentMatch: true
              - orRules:
                  rules:
                    - header:
                        exactMatch: /exact
                        name: :path
                    - header:
                        name: :path
                        prefixMatch: /prefix/
                    - header:
                        name: :path
                        suffixMatch: /suffix
                    - header:
                        name: :path
                        presentMatch: true
              - orRules:
                  rules:
                    - destinationPort: 80
                    - destinationPort: 90
              - orRules:
                  rules:
                    - destinationIp:
                        addressPrefix: 10.10.10.10
                        prefixLen: 32
                    - destinationIp:
                        addressPrefix: 192.168.10.0
                        prefixLen: 24
              - orRules:
                  rules:
                    - destinationPort: 91
                    - destinationPort: 92
              - orRules:
                  rules:
                    - requestedServerName:
                        exact: exact.com
                    - requestedServerName:
                        suffix: .suffix.com
                    - requestedServerName:
                        prefix: prefix.
                    - requestedServerName:
                        regex: .+
              - orRules:
                  rules:
                    - metadata:
                        filter: envoy.filters.a.b
                        path:
                          - key: c
                        value:
                          stringMatch:
                            exact: exact
                    - metadata:
                        filter: envoy.filters.a.b
                        path:
                          - key: c
                        value:
                          stringMatch:
                            prefix: prefix-
                    - metadata:
                        filter: envoy.filters.a.b
                        path:
                          - key: c
                        value:
                          stringMatch:
                            suffix: -suffix
                    - metadata:
                        filter: envoy.filters.a.b
                        path:
                          - key: c
                        value:
                          stringMatch:
                            regex: .+
      principals:
        - andIds:
            ids:
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            exact: principal
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            prefix: principal-prefix-
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            suffix: -suffix-principal
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .+
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.principal
                        value:
                          stringMatch:
                            exact: requestPrincipals
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.principal
                        value:
                          stringMatch:
                            prefix: requestPrincipals-prefix-
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.principal
                        value:
                          stringMatch:
                            suffix: -suffix-requestPrincipals
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.principal
                        value:
                          stringMatch:
                            regex: .+
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .*/ns/ns/.*
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .*/ns/ns-prefix-.*/.*
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .*/ns/.*-ns-suffix/.*
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .*/ns/.*/.*
              - orIds:
                  ids:
                    - sourceIp:
                        addressPrefix: 1.2.3.4
                        prefixLen: 32
                    - sourceIp:
                        addressPrefix: 5.6.0.0
                        prefixLen: 16
              - orIds:
                  ids:
                    - header:
                        exactMatch: header
                        name: X-header
                    - header:
                        name: X-header
                        prefixMatch: header-prefix-
                    - header:
                        name: X-header
                        suffixMatch: -suffix-header
                    - header:
                        name: X-header
                        presentMatch: true
              - header:
                  name: X-header-regex
                  safeRegexMatch:
                    googleRe2: {}
                    regex: some.*value
              - orIds:
                  ids:
                    - sourceIp:
                        addressPrefix: 10.10.10.10
                        prefixLen: 32
                    - sourceIp:
                        addressPrefix: 192.168.10.0
                        prefixLen: 24
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .*/ns/ns/.*
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .*/ns/ns-prefix-.*/.*
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .*/ns/.*-ns-suffix/.*
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .*/ns/.*/.*
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            exact: principal
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            prefix: principal-prefix-
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            suffix: -suffix-principal
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            regex: .+
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.principal
                        value:
                          stringMatch:
                            exact: requestPrincipals
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.principal
                        value:
                          stringMatch:
                            prefix: requestPrincipals-prefix-
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.principal
                        value:
                          stringMatch:
                            suffix: -suffix-requestPrincipals
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.principal
                        value:
                          stringMatch:
                            regex: .+
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.audiences
                        value:
                          stringMatch:
                            exact: audiences
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.audiences
                        value:
                          stringMatch:
                            prefix: audiences-prefix-
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.audiences
                        value:
                          stringMatch:
                            suffix: -suffix-audiences
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.audiences
                        value:
                          stringMatch:
                            regex: .+
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.presenter
                        value:
                          stringMatch:
                            exact: presenter
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.presenter
                        value:
                          stringMatch:
                            prefix: presenter-prefix-
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.presenter
                        value:
                          stringMatch:
                            suffix: -suffix-presenter
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.presenter
                        value:
                          stringMatch:
                            regex: .+
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.claims
                          - key: iss
                        value:
                          listMatch:
                            oneOf:
                              stringMatch:
                                exact: iss
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.claims
                          - key: iss
                        value:
                          listMatch:
                            oneOf:
                              stringMatch:
                                prefix: iss-prefix-
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.claims
                          - key: iss
                        value:
                          listMatch:
                            oneOf:
                              stringMatch:
                                suffix: -suffix-iss
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: request.auth.claims
                          - key: iss
                        value:
                          listMatch:
                            oneOf:
                              stringMatch:
                                regex: .+
