pilot/pkg/security/authz/builder/testdata/v1beta1/allow-all-out.yaml
rules:
  policies:
    ns[foo]-policy[allow-all]-rule[0]:
      permissions:
        - andRules:
            rules:
              - any: true
      principals:
        - andIds:
            ids:
              - any: true
