pilot/pkg/security/authz/builder/testdata/v1beta1/deny-all-in.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
