pilot/pkg/security/authz/builder/testdata/v1beta1/override-v1alpha1-out.yaml
rules:
  policies:
    ns[foo]-policy[httpbin-1]-rule[0]:
      permissions:
        - andRules:
            rules:
              - orRules:
                  rules:
                    - header:
                        exactMatch: GET
                        name: :method
      principals:
        - andIds:
            ids:
              - any: true
