pilot/pkg/security/authz/builder/testdata/v1beta1/path14-out.yaml
rules:
  policies:
    ns[foo]-policy[httpbin-1]-rule[0]:
      permissions:
        - andRules:
            rules:
              - orRules:
                  rules:
                    - header:
                        exactMatch: /exact
                        name: :path
                    - header:
                        name: :path
                        prefixMatch: /prefix/
                    - header:
                        name: :path
                        suffixMatch: /suffix
                    - header:
                        name: :path
                        presentMatch: true
              - notRule:
                  orRules:
                    rules:
                      - header:
                          exactMatch: /not-exact
                          name: :path
                      - header:
                          name: :path
                          prefixMatch: /not-prefix/
                      - header:
                          name: :path
                          suffixMatch: /not-suffix
                      - header:
                          name: :path
                          presentMatch: true
      principals:
        - andIds:
            ids:
              - any: true
