pilot/pkg/security/authz/builder/testdata/v1beta1/path15-out.yaml
rules:
  policies:
    ns[foo]-policy[httpbin-1]-rule[0]:
      permissions:
        - andRules:
            rules:
              - orRules:
                  rules:
                    - urlPath:
                        path:
                          exact: /exact
                    - urlPath:
                        path:
                          prefix: /prefix/
                    - urlPath:
                        path:
                          suffix: /suffix
                    - urlPath:
                        path:
                          safeRegex:
                            googleRe2: {}
                            regex: .+
              - notRule:
                  orRules:
                    rules:
                      - urlPath:
                          path:
                            exact: /not-exact
                      - urlPath:
                          path:
                            prefix: /not-prefix/
                      - urlPath:
                          path:
                            suffix: /not-suffix
                      - urlPath:
                          path:
                            safeRegex:
                              googleRe2: {}
                              regex: .+
      principals:
        - andIds:
            ids:
              - any: true
