pilot/pkg/security/authz/builder/testdata/v1beta1/simple-policy-multiple-td-aliases-out.yaml
rules:
  policies:
    ns[foo]-policy[httpbin]-rule[0]:
      permissions:
      - andRules:
          rules:
          - any: true
      principals:
      - andIds:
          ids:
          - orIds:
              ids:
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: td1/ns/rule[0]/sa/from[0]-principal[0]
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: cluster.local/ns/rule[0]/sa/from[0]-principal[0]
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: some-td/ns/rule[0]/sa/from[0]-principal[0]
      - andIds:
          ids:
          - orIds:
              ids:
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: td1/ns/rule[0]/sa/from[1]-principal[0]
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: cluster.local/ns/rule[0]/sa/from[1]-principal[0]
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: some-td/ns/rule[0]/sa/from[1]-principal[0]
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: td1/ns/rule[0]/sa/from[1]-principal[1]
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: cluster.local/ns/rule[0]/sa/from[1]-principal[1]
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      exact: some-td/ns/rule[0]/sa/from[1]-principal[1]
          - orIds:
              ids:
              - metadata:
                  filter: istio_authn
                  path:
                  - key: source.principal
                  value:
                    stringMatch:
                      safeRegex:
                        googleRe2: {}
                        regex: .*/ns/rule[0]-from[1]-ns[0]/.*
