pilot/pkg/security/authz/builder/testdata/v1beta1/simple-policy-principal-with-*-out.yaml
rules:
  policies:
    ns[foo]-policy[httpbin]-rule[0]:
      permissions:
        - andRules:
            rules:
              - any: true
      principals:
        - andIds:
            ids:
              - orIds:
                  ids:
                    - any: true
        - andIds:
            ids:
              - orIds:
                  ids:
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            suffix: /ns/foo/sa/rule[0]-from[1]-principal[0]
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            exact: td1/ns/foo/sa/rule[0]-from[1]-principal[1]
                    - metadata:
                        filter: istio_authn
                        path:
                          - key: source.principal
                        value:
                          stringMatch:
                            suffix: bar/ns/foo/sa/rule[0]-from[1]-principal[1]
