pilot/pkg/security/authz/builder/testdata/v1beta1/td-aliases-source-principal-out.yaml
rules:
              policies:
                ns[foo]-policy[httpbin]-rule[0]:
                  permissions:
                  - andRules:
                      rules:
                      - any: true
                  principals:
                  - andIds:
                      ids:
                      - orIds:
                          ids:
                          - metadata:
                              filter: istio_authn
                              path:
                              - key: source.principal
                              value:
                                stringMatch:
                                  regex: .*/ns/istio-system/.*
                      - orIds:
                          ids:
                          - metadata:
                              filter: istio_authn
                              path:
                              - key: source.principal
                              value:
                                stringMatch:
                                  regex: .+
                          - metadata:
                              filter: istio_authn
                              path:
                              - key: source.principal
                              value:
                                stringMatch:
                                  suffix: /ns/foo/sa/all-td
                          - metadata:
                              filter: istio_authn
                              path:
                              - key: source.principal
                              value:
                                stringMatch:
                                  suffix: -td/ns/foo/sa/prefix-td
                          - metadata:
                              filter: istio_authn
                              path:
                              - key: source.principal
                              value:
                                stringMatch:
                                  exact: some-trustdomain/ns/foo/sa/prefix-td
